# GW2Nexus-AddonTemplate-Unix

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  clang-cl-win64.cmake  conanfile.txt  environment  initialize.sh
docker/: clang-cl-win64.cmake
src/: Constants.h  Globals.h  Settings.cpp  Settings.h  entry.cpp
src/service/: AddonLoad.cpp  AddonLoad.h  AddonRenderer.cpp  AddonRenderer.h
